Added html content

--- a/index.html
+++ b/index.html
@@ -8,7 +8,40 @@
   <link rel="stylesheet" href="./styles/styles.css">
 </head>
 <body>
-  
+  <div id="left">
+    <div id="logo-container">
+      <div><img src="./29.jpg" alt=""></div>
+    </div>
+    <div id="content">
+      <div id="name-container">
+        <h1>Umbrella Corp.</h1>
+        <h4>"OUR BUSINESS IS LIFE ITSELF" &copy</h4>
+      </div>
+      <div id="slogan-container">
+        <p><b>SECURITY WARNING:</b> Anything viewed beyond this screen </p>
+        <p>is covered under the umbrella cooporation security agreement</p>  
+        <p>and any second party viewing by unauthorized personnel</p>
+        <p>will be punsished under said company's treason and</p>
+        <p>terrorism directive Article 12, Paragraph 19, Section C.</p>
+      </div>
+    </div>
+  </div>
+  <div id="right">
+    <form action="">
+      <div class="inpt">
+        <label for="user" class="sml"><img id="sml" src="./29.jpg" alt=""> USER</label>
+        <input type="text" name="user" id="user">
+      </div>
+      <div class="inpt">
+        <label for="code">ACCESS CODE</label>
+        <input type="text" name="code" id="code">
+      </div>
+      <div class="inpt">
+        <label for="key">SECURITY KEY</label>
+        <input type="text" name="key" id="key">
+      </div>
+    </form>
+  </div>
 </body>
 <script src="./scripts/script.js"></script>
 </html>
